--- a/_output/index.html
+++ b/_output/index.html
@@ -21,27 +21,7 @@ ul.task-list li input[type="checkbox"] {
   margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
   vertical-align: middle;
 }
-/* CSS for citations */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-  margin-bottom: 0em;
-}
-.hanging-indent div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}</style>
+</style>
 
 
 <script src="site_libs/clipboard/clipboard.min.js"></script>
@@ -54,6 +34,9 @@ div.csl-indent {
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap-bac1c56864119d97d87e9872e9e076ce.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="site_libs/quarto-contrib/glightbox/glightbox.min.js"></script>
+<link href="site_libs/quarto-contrib/glightbox/glightbox.min.css" rel="stylesheet">
+<link href="site_libs/quarto-contrib/glightbox/lightbox.css" rel="stylesheet">
 <script async="" src="https://hypothes.is/embed.js"></script>
 <script>
   window.document.addEventListener("DOMContentLoaded", function (_event) {
@@ -113,7 +96,7 @@ div.csl-indent {
               </div>
       </div>
       <div class="quarto-title-meta-column-end quarto-other-formats-target">
-      <div class="quarto-alternate-formats"><div class="quarto-title-meta-heading">Other Formats</div><div class="quarto-title-meta-contents"><p><a href="index.docx"><i class="bi bi-file-word"></i>MS Word</a></p></div><div class="quarto-title-meta-contents"><p><a href="index.pdf"><i class="bi bi-file-pdf"></i>PDF</a></p></div><div class="quarto-title-meta-contents"><p><a href="bundle-malyukov-bass.zip" data-meca-link="true"><i class="bi bi-archive"></i>MECA Bundle</a></p></div></div></div>
+      <div class="quarto-alternate-formats"><div class="quarto-title-meta-heading">Other Formats</div><div class="quarto-title-meta-contents"><p><a href="report-malyukov-bass.docx"><i class="bi bi-file-word"></i>MS Word</a></p></div><div class="quarto-title-meta-contents"><p><a href="report-malyukov-bass.pdf"><i class="bi bi-file-pdf"></i>PDF</a></p></div><div class="quarto-title-meta-contents"><p><a href="bundle-malyukov-bass.zip" data-meca-link="true"><i class="bi bi-archive"></i>MECA Bundle</a></p></div></div></div>
     </div>
 
     <div>
@@ -138,23 +121,22 @@ div.csl-indent {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#section" id="toc-section" class="nav-link active" data-scroll-target="#section">Section</a></li>
-  <li><a href="#introduction" id="toc-introduction" class="nav-link" data-scroll-target="#introduction">Introduction</a></li>
-  <li><a href="#section-1" id="toc-section-1" class="nav-link" data-scroll-target="#section-1"></a></li>
+  <li><a href="#introduction" id="toc-introduction" class="nav-link active" data-scroll-target="#introduction">Introduction</a></li>
+  <li><a href="#section" id="toc-section" class="nav-link" data-scroll-target="#section"></a></li>
   <li><a href="#sector-analysis" id="toc-sector-analysis" class="nav-link" data-scroll-target="#sector-analysis">Sector Analysis</a></li>
-  <li><a href="#section-2" id="toc-section-2" class="nav-link" data-scroll-target="#section-2"></a></li>
+  <li><a href="#section-1" id="toc-section-1" class="nav-link" data-scroll-target="#section-1"></a></li>
   <li><a href="#personality-of-the-company" id="toc-personality-of-the-company" class="nav-link" data-scroll-target="#personality-of-the-company">Personality of the Company</a></li>
-  <li><a href="#section-3" id="toc-section-3" class="nav-link" data-scroll-target="#section-3"></a></li>
+  <li><a href="#section-2" id="toc-section-2" class="nav-link" data-scroll-target="#section-2"></a></li>
   <li><a href="#fundamental-analysis" id="toc-fundamental-analysis" class="nav-link" data-scroll-target="#fundamental-analysis">Fundamental Analysis</a></li>
-  <li><a href="#section-4" id="toc-section-4" class="nav-link" data-scroll-target="#section-4"></a></li>
+  <li><a href="#section-3" id="toc-section-3" class="nav-link" data-scroll-target="#section-3"></a></li>
   <li><a href="#technical-analysis" id="toc-technical-analysis" class="nav-link" data-scroll-target="#technical-analysis">Technical Analysis</a></li>
-  <li><a href="#section-5" id="toc-section-5" class="nav-link" data-scroll-target="#section-5"></a></li>
+  <li><a href="#section-4" id="toc-section-4" class="nav-link" data-scroll-target="#section-4"></a></li>
   <li><a href="#company-performance-2019-2024" id="toc-company-performance-2019-2024" class="nav-link" data-scroll-target="#company-performance-2019-2024">Company Performance 2019-2024</a></li>
-  <li><a href="#section-6" id="toc-section-6" class="nav-link" data-scroll-target="#section-6"></a></li>
+  <li><a href="#section-5" id="toc-section-5" class="nav-link" data-scroll-target="#section-5"></a></li>
   <li><a href="#forecasting" id="toc-forecasting" class="nav-link" data-scroll-target="#forecasting">Forecasting</a></li>
-  <li><a href="#section-7" id="toc-section-7" class="nav-link" data-scroll-target="#section-7"></a></li>
+  <li><a href="#section-6" id="toc-section-6" class="nav-link" data-scroll-target="#section-6"></a></li>
   <li><a href="#summary" id="toc-summary" class="nav-link" data-scroll-target="#summary">Summary</a></li>
-  <li><a href="#section-8" id="toc-section-8" class="nav-link" data-scroll-target="#section-8"></a></li>
+  <li><a href="#section-7" id="toc-section-7" class="nav-link" data-scroll-target="#section-7"></a></li>
   </ul>
 <div class="quarto-alternate-notebooks"><h2>Notebooks</h2><ul><li><a href="notebooks/2019-2024-preview.html"><i class="bi bi-journal-code"></i>Company Performance 2019-2024</a></li><li><a href="notebooks/forecasting-preview.html"><i class="bi bi-journal-code"></i>Forecasting</a></li><li><a href="notebooks/fundamentals-preview.html"><i class="bi bi-journal-code"></i>Fundamental Analysis</a></li><li><a href="notebooks/intro-preview.html"><i class="bi bi-journal-code"></i>Introduction</a></li><li><a href="notebooks/personality-preview.html"><i class="bi bi-journal-code"></i>Personality of the Company</a></li><li><a href="notebooks/sector-preview.html"><i class="bi bi-journal-code"></i>Sector Analysis</a></li><li><a href="notebooks/summary-preview.html"><i class="bi bi-journal-code"></i>Summary</a></li><li><a href="notebooks/technical-preview.html"><i class="bi bi-journal-code"></i>Technical Analysis</a></li></ul></div></nav>
 </div>
@@ -167,87 +149,80 @@ div.csl-indent {
   
 
 
-<section id="section" class="level2">
-<h2 class="anchored" data-anchor-id="section">Section</h2>
-<p>This is a simple placeholder for the manuscript’s main document <span class="citation" data-cites="knuth84">(<a href="#ref-knuth84" role="doc-biblioref">Knuth 1984</a>)</span>.</p>
-</section>
+<!-- ## Section -->
+<!-- This is a simple placeholder for the manuscript's main document [@knuth84]. -->
 <section id="introduction" class="level2">
 <h2 class="anchored" data-anchor-id="introduction">Introduction</h2>
 </section>
-<section id="section-1" class="level1 quarto-embed-nb-cell">
+<section id="section" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 <p>That’s a nice intro.</p>
-<div id="fda189a6-f579-48bd-8994-1da4712a0dce" class="cell">
-<div class="cell-output cell-output-stdout">
-<pre><code>  [1]  1.15913288  0.17595560  1.01237244  1.64181997  1.78963953  0.43712834
-  [7]  0.82984990 -1.09358171 -0.42276567 -0.52893883 -0.38299454  0.54410563
- [13] -0.59359729 -0.20299022  0.09396878  0.07522498 -0.62985778 -1.73167297
- [19] -0.93261370  0.16906614 -0.77904340 -1.44307954  0.60866223  0.18887818
- [25]  0.22786503 -1.17101276 -0.37033297  0.44449022 -0.60030785 -0.79213445
- [31] -0.64086324  1.19368531 -1.34059874  0.54170420  0.18593821 -1.83146625
- [37]  0.51984152  0.19834930  0.20800875  0.83579145 -0.15278151  1.10422442
- [43]  2.17830932  0.59187002 -0.39191560  1.06301650  0.87832333 -0.61784016
- [49]  0.19170450  0.83581762 -0.21026709  0.99807371 -0.92304481  1.04308062
- [55] -0.54135580  0.39924107  0.11215560  0.94549254 -1.41657246 -0.82540475
- [61]  0.98105361 -1.44770036 -0.09805152 -2.06447911  0.31363366 -0.87877207
- [67]  1.32815165  0.61793957 -1.10489866  1.16638018 -0.74740084  1.14408566
- [73]  0.29119570 -0.93432828 -1.63397870 -0.22759023 -0.51635683  0.83458393
- [79] -0.70088571  0.41683429 -0.68853476 -0.11071441  0.38437017  2.56892162
- [85]  0.41132811  1.79416556 -0.97247802 -2.94075524 -0.24842494  0.73071804
- [91] -0.28204101 -1.24967019 -1.27877377 -0.44689221  0.47974999  0.56048231
- [97]  0.15162570 -0.75799153  1.18125170 -0.42798574</code></pre>
+<div id="3045899c-700b-491b-82c4-551f2e9fae88" class="cell">
+<div class="cell-output cell-output-display">
+<div>
+<figure class="figure">
+<p><a href="index_files/figure-html/notebooks-intro-cell-2-output-1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1"><img src="index_files/figure-html/notebooks-intro-cell-2-output-1.png" class="img-fluid figure-img"></a></p>
+</figure>
+</div>
 </div>
 </div>
 </section>
 <section id="sector-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="sector-analysis">Sector Analysis</h2>
 </section>
-<section id="section-2" class="level1 quarto-embed-nb-cell">
+<section id="section-1" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 </section>
 <section id="personality-of-the-company" class="level2">
 <h2 class="anchored" data-anchor-id="personality-of-the-company">Personality of the Company</h2>
 </section>
-<section id="section-3" class="level1 quarto-embed-nb-cell">
+<section id="section-2" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 </section>
 <section id="fundamental-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="fundamental-analysis">Fundamental Analysis</h2>
 </section>
-<section id="section-4" class="level1 quarto-embed-nb-cell">
+<section id="section-3" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 </section>
 <section id="technical-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="technical-analysis">Technical Analysis</h2>
 </section>
-<section id="section-5" class="level1 quarto-embed-nb-cell">
+<section id="section-4" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 </section>
 <section id="company-performance-2019-2024" class="level2">
 <h2 class="anchored" data-anchor-id="company-performance-2019-2024">Company Performance 2019-2024</h2>
 </section>
-<section id="section-6" class="level1 quarto-embed-nb-cell">
+<section id="section-5" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 </section>
 <section id="forecasting" class="level2">
 <h2 class="anchored" data-anchor-id="forecasting">Forecasting</h2>
 </section>
-<section id="section-7" class="level1 quarto-embed-nb-cell">
+<section id="section-6" class="level1 quarto-embed-nb-cell">
 <h1></h1>
+<ul>
+<li>What risks does it list on 10-k? Summarize.</li>
+</ul>
+<div id="d68d1d0f-edc7-4fa7-9531-ca9df4e90150" class="cell">
+<div class="cell-output cell-output-display">
+<div>
+<figure class="figure">
+<p><a href="index_files/figure-html/notebooks-forecasting-cell-2-output-2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2"><img src="index_files/figure-html/notebooks-forecasting-cell-2-output-2.png" class="img-fluid figure-img"></a></p>
+</figure>
+</div>
+</div>
+</div>
 </section>
 <section id="summary" class="level2">
 <h2 class="anchored" data-anchor-id="summary">Summary</h2>
 </section>
-<section id="section-8" class="level1 quarto-embed-nb-cell">
+<section id="section-7" class="level1 quarto-embed-nb-cell">
 <h1></h1>
 </section>
 
-
-<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
-<div id="ref-knuth84" class="csl-entry" role="listitem">
-Knuth, Donald E. 1984. <span>“Literate Programming.”</span> <em>Comput. J.</em> 27 (2): 97–111. <a href="https://doi.org/10.1093/comjnl/27.2.97">https://doi.org/10.1093/comjnl/27.2.97</a>.
-</div>
-</div></section></div></main>
+</main>
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
@@ -667,6 +642,38 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","descPosition":"bottom","loop":false,"openEffect":"zoom","selector":".lightbox"});
+(function() {
+  let previousOnload = window.onload;
+  window.onload = () => {
+    if (previousOnload) {
+      previousOnload();
+    }
+    lightboxQuarto.on('slide_before_load', (data) => {
+      const { slideIndex, slideNode, slideConfig, player, trigger } = data;
+      const href = trigger.getAttribute('href');
+      if (href !== null) {
+        const imgEl = window.document.querySelector(`a[href="${href}"] img`);
+        if (imgEl !== null) {
+          const srcAttr = imgEl.getAttribute("src");
+          if (srcAttr && srcAttr.startsWith("data:")) {
+            slideConfig.href = srcAttr;
+          }
+        }
+      } 
+    });
+  
+    lightboxQuarto.on('slide_after_load', (data) => {
+      const { slideIndex, slideNode, slideConfig, player, trigger } = data;
+      if (window.Quarto?.typesetMath) {
+        window.Quarto.typesetMath(slideNode);
+      }
+    });
+  
+  };
+  
+})();
+          </script>
 
 
 
