--- a/_output/notebooks/2019-2024-preview.html
+++ b/_output/notebooks/2019-2024-preview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-    <title>quarto-inputaca1b296942dfd96</title>
+    <title>quarto-input5c543d818aaee8cb</title>
     <style>
       code{white-space: pre-wrap;}
       span.smallcaps{font-variant: small-caps;}
@@ -134,7 +134,7 @@
     <div id="quarto-embed-header" class="headroom fixed-top bg-primary">
       
       <a onclick="window.quartoBackToArticle(); return false;" class="btn btn-primary quarto-back-link" href=""><i class="bi bi-caret-left"></i> Back to Article</a>
-      <h6><i class="bi bi-journal-code"></i> 2019-2024.qmd</h6>
+      <h6><i class="bi bi-journal-code"></i> Company Performance 2019-2024</h6>
 
             <a href="../notebooks/2019-2024.qmd" class="btn btn-primary quarto-download-embed" download="2019-2024.qmd">Download Source</a>
           </div>
