--- a/_output/notebooks/personality-preview.html
+++ b/_output/notebooks/personality-preview.html
@@ -134,7 +134,7 @@
     <div id="quarto-embed-header" class="headroom fixed-top bg-primary">
       
       <a onclick="window.quartoBackToArticle(); return false;" class="btn btn-primary quarto-back-link" href=""><i class="bi bi-caret-left"></i> Back to Article</a>
-      <h6><i class="bi bi-journal-code"></i> personality.qmd</h6>
+      <h6><i class="bi bi-journal-code"></i> Personality of the Company</h6>
 
             <a href="../notebooks/personality.qmd" class="btn btn-primary quarto-download-embed" download="personality.qmd">Download Source</a>
           </div>
