--- a/_output/notebooks/intro-preview.html
+++ b/_output/notebooks/intro-preview.html
@@ -176,13 +176,13 @@
             <a href="../notebooks/intro.qmd" class="btn btn-primary quarto-download-embed" download="intro.qmd">Download Source</a>
           </div>
 
-     <div id="quarto-content" class="page-columns page-rows-contents page-layout-article toc-left">
+     <div id="quarto-content" class="page-columns page-rows-contents page-layout-full toc-left">
 <div id="quarto-sidebar-toc-left" class="sidebar toc-left">
   
 </div>
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
 </div>
-<main class="content quarto-banner-title-block" id="quarto-document-content">    <div class="callout callout-style-default callout-warning callout-titled">
+<main class="content quarto-banner-title-block column-page" id="quarto-document-content">    <div class="callout callout-style-default callout-warning callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
@@ -193,7 +193,7 @@ On the simplified nature of analysis in this document.
 </div>
 <div class="callout-body-container callout-body">
 <p>Subject of financial analysis is very information-dense and to perform such an analysis (be it an analysis of industrial sectors, fundamental, technical, etc.) in earnest is a non-trivial job that we don’t see ourselves capable of performing.</p>
-<p>Therefore, this document aims to provide a simplified, non-rigorous analysis aiming to showcase our understanding of course material and minimal proficiency in scientific communication using tools such as R language <span class="citation" data-cites="ProjectStatisticalComputing">@ProjectStatisticalComputing</span>, its “tidyquant” package <span class="citation" data-cites="danchoTidyquantTidyQuantitative2025">@danchoTidyquantTidyQuantitative2025</span> and Quarto scientific publishing system <span class="citation" data-cites="Quarto">@Quarto</span>.</p>
+<p>Therefore, this document aims to provide a simplified, non-rigorous analysis aiming to showcase our understanding of course material and minimal proficiency in scientific communication using tools such as DeepSeek LLM with Web Search functionality, R language <span class="citation" data-cites="ProjectStatisticalComputing">[@ProjectStatisticalComputing]</span>, its “tidyquant” package <span class="citation" data-cites="danchoTidyquantTidyQuantitative2025">[@danchoTidyquantTidyQuantitative2025]</span> and Quarto scientific publishing system <span class="citation" data-cites="Quarto">[@Quarto]</span>.</p>
 </div>
 </div>
 <div class="cell-container"><div class="cell-decorator"><pre>In [1]:</pre></div><div class="cell">
