--- a/_output/notebooks/technical-preview.html
+++ b/_output/notebooks/technical-preview.html
@@ -176,13 +176,13 @@
             <a href="../notebooks/technical.qmd" class="btn btn-primary quarto-download-embed" download="technical.qmd">Download Source</a>
           </div>
 
-     <div id="quarto-content" class="page-columns page-rows-contents page-layout-article toc-left">
+     <div id="quarto-content" class="page-columns page-rows-contents page-layout-full toc-left">
 <div id="quarto-sidebar-toc-left" class="sidebar toc-left">
   
 </div>
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
 </div>
-<main class="content quarto-banner-title-block" id="quarto-document-content">    <!--
+<main class="content quarto-banner-title-block column-page" id="quarto-document-content">    <!--
 See "technical overview example" in notes. 
 Use The Relative Strength Index (RSI).
 Overbought/oversold analysis. 
