Before the start of major refactor

--- a/_output/notebooks/2019-2024-preview.html
+++ b/_output/notebooks/2019-2024-preview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-    <title>quarto-inputee38f97599f06f54</title>
+    <title>quarto-input2ab265b1f6f078be</title>
     <style>
       code{white-space: pre-wrap;}
       span.smallcaps{font-variant: small-caps;}
@@ -159,12 +159,7 @@
 <script src="../site_libs/quarto-contrib/glightbox/glightbox.min.js"></script>
 <link href="../site_libs/quarto-contrib/glightbox/glightbox.min.css" rel="stylesheet">
 <link href="../site_libs/quarto-contrib/glightbox/lightbox.css" rel="stylesheet">
-     <script async="" src="https://hypothes.is/embed.js"></script>
-<script>
-  window.document.addEventListener("DOMContentLoaded", function (_event) {
-    document.body.classList.add('hypothesis-enabled');
-  });
-</script>  
+     
       </head>
 
   <body class="quarto-notebook">
@@ -182,8 +177,8 @@
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#historical-analysis-of-the-company" id="toc-historical-analysis-of-the-company" class="nav-link active" data-scroll-target="#historical-analysis-of-the-company">Historical Analysis of the Company</a></li>
-  <li><a href="#conclusion" id="toc-conclusion" class="nav-link" data-scroll-target="#conclusion">Conclusion</a></li>
+  <li><a href="#historical-analysis-of-the-company" id="toc-historical-analysis-of-the-company" class="nav-link active" data-scroll-target="#historical-analysis-of-the-company"><strong>Historical Analysis of the Company</strong></a></li>
+  <li><a href="#conclusion" id="toc-conclusion" class="nav-link" data-scroll-target="#conclusion"><strong>Conclusion</strong></a></li>
   </ul>
 </nav>
 </div>
@@ -203,7 +198,7 @@ Note
 </div>
 </div>
 <section id="historical-analysis-of-the-company" class="level3">
-<h3 class="anchored" data-anchor-id="historical-analysis-of-the-company">Historical Analysis of the Company</h3>
+<h3 class="anchored" data-anchor-id="historical-analysis-of-the-company"><strong>Historical Analysis of the Company</strong></h3>
 <p>As we’ve identified in the previous sections, major events for the company in this peroid included the adoption of IGNITE strategy and recent cyberattack. Another major event was, of course, the global pandemic.</p>
 <p>In terms of the corporation’s life cycle, Clorox is definitely in the <strong>Maturity</strong> phase: it is relatively stable, resilient to shocks and demonstrates confidence during the recovery from such shocks.</p>
 <p>Getting historical data is very easy with R language - you just provide the time period you are interested in, and get it same as always.</p>
@@ -388,7 +383,7 @@ The following objects are masked from 'package:base':
 </table>
 </section>
 <section id="conclusion" class="level3">
-<h3 class="anchored" data-anchor-id="conclusion">Conclusion</h3>
+<h3 class="anchored" data-anchor-id="conclusion"><strong>Conclusion</strong></h3>
 <p>We can use publicly available data, as well as the R language to get historical financial data and ratios. The analysis shows strong performance during the last five-year period.</p>
 </section>
      </main>
