--- a/_output/notebooks/personality-preview.html
+++ b/_output/notebooks/personality-preview.html
@@ -122,12 +122,7 @@
 <script src="../site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="../site_libs/bootstrap/bootstrap-bac1c56864119d97d87e9872e9e076ce.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
-     <script async="" src="https://hypothes.is/embed.js"></script>
-<script>
-  window.document.addEventListener("DOMContentLoaded", function (_event) {
-    document.body.classList.add('hypothesis-enabled');
-  });
-</script>  
+     
       </head>
 
   <body class="quarto-notebook">
@@ -141,11 +136,20 @@
 
      <div id="quarto-content" class="page-columns page-rows-contents page-layout-full toc-left">
 <div id="quarto-sidebar-toc-left" class="sidebar toc-left">
-  
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#company-purpose-and-responsibility" id="toc-company-purpose-and-responsibility" class="nav-link active" data-scroll-target="#company-purpose-and-responsibility"><strong>Company Purpose and Responsibility</strong></a></li>
+  <li><a href="#key-executives-their-commitment-and-performance" id="toc-key-executives-their-commitment-and-performance" class="nav-link" data-scroll-target="#key-executives-their-commitment-and-performance"><strong>Key Executives, Their Commitment and Performance</strong></a></li>
+  <li><a href="#company-brand-and-reputation" id="toc-company-brand-and-reputation" class="nav-link" data-scroll-target="#company-brand-and-reputation"><strong>Company Brand and Reputation</strong></a></li>
+  <li><a href="#conclusion" id="toc-conclusion" class="nav-link" data-scroll-target="#conclusion"><strong>Conclusion</strong></a></li>
+  </ul>
+</nav>
 </div>
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
 </div>
-<main class="content quarto-banner-title-block column-page" id="quarto-document-content">    <!--
+<main class="content quarto-banner-title-block column-page-right" id="quarto-document-content">      <!--
 Put here who the board of directors are, cite some analysis.
 Describe the cybersecurity incident, values, brands.
 Cite a few articles + analysts average.
@@ -163,14 +167,14 @@ Note
 <p>In this section we collect and cite a variety of publicly available sources to perform an analysis of the company personality. We use use DeepSeek LLM with Web Search functionality to collect and analyze these sources.</p>
 </div>
 </div>
-<section id="company-purpose-and-responsibility" class="level4">
-<h4 class="anchored" data-anchor-id="company-purpose-and-responsibility"><strong>Company Purpose and Responsibility</strong></h4>
-<section id="company-purpose" class="level5">
-<h5 class="anchored" data-anchor-id="company-purpose"><strong>Company Purpose</strong></h5>
+<section id="company-purpose-and-responsibility" class="level3">
+<h3 class="anchored" data-anchor-id="company-purpose-and-responsibility"><strong>Company Purpose and Responsibility</strong></h3>
+<section id="company-purpose" class="level4">
+<h4 class="anchored" data-anchor-id="company-purpose"><strong>Company Purpose</strong></h4>
 <p>Clorox’s stated purpose is to “champion people to be well and thrive every single day” <span class="citation" data-cites="PurposeValues">[@PurposeValues]</span>. As a health and wellness company, Clorox aims to make a meaningful and positive impact on the world by improving the health and safety of employees, consumers, and communities. All of this is reflected in their family-friendly and inclusive branding.</p>
 </section>
-<section id="responsibility-policies" class="level5">
-<h5 class="anchored" data-anchor-id="responsibility-policies"><strong>Responsibility Policies</strong></h5>
+<section id="responsibility-policies" class="level4">
+<h4 class="anchored" data-anchor-id="responsibility-policies"><strong>Responsibility Policies</strong></h4>
 <p>Clorox integrates environmental, social, and governance (ESG) goals into its core business strategy <span class="citation" data-cites="Responsibility">[@Responsibility]</span>. Key areas of focus include:</p>
 <ul>
 <li><strong>Healthy Lives</strong>: Promoting employee well-being, product stewardship, and transparency in ingredients.<br>
@@ -181,8 +185,8 @@ Note
 </ul>
 <p>Clorox has set ambitious targets, such as achieving net-zero emissions by 2050.</p>
 </section>
-<section id="ignite-strategy" class="level5">
-<h5 class="anchored" data-anchor-id="ignite-strategy"><strong>IGNITE Strategy</strong></h5>
+<section id="ignite-strategy" class="level4">
+<h4 class="anchored" data-anchor-id="ignite-strategy"><strong>IGNITE Strategy</strong></h4>
 <p>The IGNITE strategy is Clorox’s long-term plan to drive what the company calls a “purpose-driven growth” <span class="citation" data-cites="IGNITEStrategy">[@IGNITEStrategy]</span> by aligning financial goals with ESG priorities. Key pillars include:</p>
 <ul>
 <li><strong>Fuel Growth</strong>: Leveraging technology and sustainability to generate cost savings and reinvest in brands.<br>
@@ -196,8 +200,8 @@ Note
 <p>The strategy also includes specific financial targets, such as 2-4% net sales growth and 11-13% free cash flow generation.</p>
 </section>
 </section>
-<section id="key-executives-their-commitment-and-performance" class="level4">
-<h4 class="anchored" data-anchor-id="key-executives-their-commitment-and-performance"><strong>Key Executives, Their Commitment and Performance</strong></h4>
+<section id="key-executives-their-commitment-and-performance" class="level3">
+<h3 class="anchored" data-anchor-id="key-executives-their-commitment-and-performance"><strong>Key Executives, Their Commitment and Performance</strong></h3>
 <table class="table-hover caption-top table">
 <caption>Key Executives, source: <span class="citation" data-cites="CloroxCompanyCLX">[@CloroxCompanyCLX]</span></caption>
 <colgroup>
@@ -280,8 +284,8 @@ Note
 <p>According to <span class="citation" data-cites="CloroxCompanyBusiness">[@CloroxCompanyBusiness]</span>, CEO and Chairman Linda J. Rendle, as well as the other executives and board members have significant ownership stakes at the company, indicating high confidence in their business.</p>
 <p>Financial analysis website Simply WallSt gives the upper management team at Clorox high marks on all 4 criteria: Compensation vs Market, Compensation vs Earnings, Experienced Management and Experienced Board <span class="citation" data-cites="CloroxCompanyCLXa">[@CloroxCompanyCLXa]</span>.</p>
 </section>
-<section id="company-brand-and-reputation" class="level4">
-<h4 class="anchored" data-anchor-id="company-brand-and-reputation"><strong>Company Brand and Reputation</strong></h4>
+<section id="company-brand-and-reputation" class="level3">
+<h3 class="anchored" data-anchor-id="company-brand-and-reputation"><strong>Company Brand and Reputation</strong></h3>
 <p>Clorox is a globally recognized leader in the cleaning and consumer products industry, known for its trusted brands such as <strong>Clorox Bleach</strong>, <strong>Pine-Sol</strong>, <strong>Hidden Valley</strong>, <strong>Brita</strong>, and <strong>Burt’s Bees</strong>.</p>
 <p>The company has received numerous accolades, including being named one of <strong>America’s Greenest Companies</strong> by Newsweek, a <strong>Safer Choice Partner of the Year</strong> by the EPA, and a top performer in the <strong>Human Rights Campaign Foundation’s Corporate Equality Index</strong>. Its sustainable brands, such as <strong>Brita</strong>, <strong>Burt’s Bees</strong>, and <strong>Green Works</strong>, have gained significant consumer trust for their eco-friendly and socially responsible practices <span class="citation" data-cites="Recognitions">[@Recognitions]</span>.</p>
 <hr>
@@ -289,8 +293,8 @@ Note
 <p>The cyberattack had a material financial impact, with Clorox reporting a 23-28% decline in quarterly sales and a drop in its stock price by over 25% following the incident.</p>
 <p>Clorox’s response to the cyberattack highlighted its crisis management capabilities. The company maintained transparency by providing regular updates to stakeholders and implementing phased recovery plans to restore operations safely. Brand and reputation were not severely damaged in the process.</p>
 </section>
-<section id="conclusion" class="level4">
-<h4 class="anchored" data-anchor-id="conclusion"><strong>Conclusion</strong></h4>
+<section id="conclusion" class="level3">
+<h3 class="anchored" data-anchor-id="conclusion"><strong>Conclusion</strong></h3>
 <p>We can use modern LLM chatbots to collect publicly available sources and perform analysis of the company personality. The analysis shows strong branding, good leadership and consistent performance.</p>
 </section>
      </main>
