Add a minor correction to the Sector section

--- a/_output/index-preview.html
+++ b/_output/index-preview.html
@@ -309,7 +309,7 @@
   <ul>
   <li><a href="#sector-analysis" id="toc-sector-analysis" class="nav-link active" data-scroll-target="#sector-analysis">Sector Analysis</a>
   <ul class="collapse">
-  <li><a href="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" id="toc-financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="nav-link" data-scroll-target="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector">Financial Analysis of the Clorox Company in the Consumer Defensive Sector</a></li>
+  <li><a href="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" id="toc-financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="nav-link" data-scroll-target="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector"><strong>Financial Analysis of the Clorox Company in the Consumer Defensive Sector</strong></a></li>
   <li><a href="#conclusion" id="toc-conclusion" class="nav-link" data-scroll-target="#conclusion"><strong>Conclusion</strong></a></li>
   </ul></li>
   <li><a href="#personality-of-the-company" id="toc-personality-of-the-company" class="nav-link" data-scroll-target="#personality-of-the-company">Personality of the Company</a>
@@ -384,7 +384,7 @@ Note
 </div>
 </div>
 <section id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="level3">
-<h3 class="anchored" data-anchor-id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector">Financial Analysis of the Clorox Company in the Consumer Defensive Sector</h3>
+<h3 class="anchored" data-anchor-id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector"><strong>Financial Analysis of the Clorox Company in the Consumer Defensive Sector</strong></h3>
 <section id="sector-analysis-1" class="level4">
 <h4 class="anchored" data-anchor-id="sector-analysis-1"><strong>1. Sector Analysis</strong></h4>
 <p>Clorox operates in the <strong>Consumer Defensive sector</strong>, specifically within the Household and Personal Products sub-sector. This sector is characterized by stable demand and recession resilience.</p>
@@ -1344,7 +1344,7 @@ Attaching package: 'timetk'</code></pre>
 <section id="summary" class="level2">
 <h2 class="anchored" data-anchor-id="summary">Summary</h2>
 </section>
-<section id="section" class="level1 quarto-embed-nb-cell" data-notebook="/home/vasily/Work/College/Computational Finance/final-project/report-manuscript/documents/summary.qmd" data-notebook-title="**Analysis Summary and Letter Grade**" data-notebook-cellid="30bd2b21-4bcb-4d5d-b01b-c1d3887b7bab">
+<section id="section" class="level1 quarto-embed-nb-cell" data-notebook="/home/vasily/Work/College/Computational Finance/final-project/report-manuscript/documents/summary.qmd" data-notebook-title="**Analysis Summary and Letter Grade**" data-notebook-cellid="f4e056d6-fa5d-4eb2-93af-a70330a65e0d">
 <h1></h1>
 <section id="analysis-summary-and-letter-grade" class="level3">
 <h3 class="anchored" data-anchor-id="analysis-summary-and-letter-grade"><strong>Analysis Summary and Letter Grade</strong></h3>
