--- a/_output/index.html
+++ b/_output/index.html
@@ -214,7 +214,7 @@ div.csl-indent {
   <ul>
   <li><a href="#sector-analysis" id="toc-sector-analysis" class="nav-link active" data-scroll-target="#sector-analysis">Sector Analysis</a>
   <ul class="collapse">
-  <li><a href="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" id="toc-financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="nav-link" data-scroll-target="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector">Financial Analysis of the Clorox Company in the Consumer Defensive Sector</a></li>
+  <li><a href="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" id="toc-financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="nav-link" data-scroll-target="#financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector"><strong>Financial Analysis of the Clorox Company in the Consumer Defensive Sector</strong></a></li>
   <li><a href="#conclusion" id="toc-conclusion" class="nav-link" data-scroll-target="#conclusion"><strong>Conclusion</strong></a></li>
   </ul></li>
   <li><a href="#personality-of-the-company" id="toc-personality-of-the-company" class="nav-link" data-scroll-target="#personality-of-the-company">Personality of the Company</a>
@@ -294,7 +294,7 @@ Note
 </div>
 </div>
 <section id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="level3">
-<h3 class="anchored" data-anchor-id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector">Financial Analysis of the Clorox Company in the Consumer Defensive Sector</h3>
+<h3 class="anchored" data-anchor-id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector"><strong>Financial Analysis of the Clorox Company in the Consumer Defensive Sector</strong></h3>
 <section id="sector-analysis-1" class="level4">
 <h4 class="anchored" data-anchor-id="sector-analysis-1"><strong>1. Sector Analysis</strong></h4>
 <p>Clorox operates in the <strong>Consumer Defensive sector</strong>, specifically within the Household and Personal Products sub-sector. This sector is characterized by stable demand and recession resilience.</p>
