Some minor corrections, not pushed

--- a/_output/index.html
+++ b/_output/index.html
@@ -296,14 +296,14 @@ Note
 <section id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector" class="level3">
 <h3 class="anchored" data-anchor-id="financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector"><strong>Financial Analysis of the Clorox Company in the Consumer Defensive Sector</strong></h3>
 <section id="sector-analysis-1" class="level4">
-<h4 class="anchored" data-anchor-id="sector-analysis-1"><strong>1. Sector Analysis</strong></h4>
+<h4 class="anchored" data-anchor-id="sector-analysis-1"><strong>Sector Analysis</strong></h4>
 <p>Clorox operates in the <strong>Consumer Defensive sector</strong>, specifically within the Household and Personal Products sub-sector. This sector is characterized by stable demand and recession resilience.</p>
 <p>Sector’s <strong>Market Cap</strong> is estimated to be $3.7 trillion. The <strong>Market Weight (Share)</strong> of the sector relative to the other 10 sectors is 5.45%.</p>
 <p>Sector’s <strong>Year-To-Date Return</strong> is 6.17%, which outperforms S&amp;P500 (3.54%).</p>
 <hr>
 </section>
 <section id="position-relative-to-competitors" class="level4">
-<h4 class="anchored" data-anchor-id="position-relative-to-competitors"><strong>2. Position Relative to Competitors</strong></h4>
+<h4 class="anchored" data-anchor-id="position-relative-to-competitors"><strong>Position Relative to Competitors</strong></h4>
 <p>Clorox’s market share inside it’s sector is relatively small:</p>
 <table class="table-striped table-hover caption-top table">
 <caption>CLX’s Market share relative to its competitors, as of Q4 2024 within the Consumer Non Cyclical Sector (i.e.&nbsp;Consumer Defensive), source: <span class="citation" data-cites="CloroxMarketShare"><span>“The <span>Clorox Market</span> Share Relative to Its Competitors, as of <span>Q4</span> 2024 - <span>CSIMarket</span>”</span> (<a href="#ref-CloroxMarketShare" role="doc-biblioref">2025</a>)</span></caption>
